# test-pip-with-go

./: .gitignore  README.md  pyproject.toml
src/: binary  go.mod  setup.py  wrapper.py  wrapper_test.py
